# filestructure

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  common.h  elf.h  elf_layout_controller.cpp  elf_layout_controller.h  elf_layout_controller.hpp  elf_process_controller.cpp  elf_process_controller.h  filestructure.sln  filetypes.h  layout_controller.hpp  license_source.txt  mapped_file_controller.h  pe.h  pe.hpp  pe_layout_controller.cpp  pe_layout_controller.hpp  pe_process_controller.cpp  pe_process_controller.h  process.h  process.hpp  process_layout_controller.hpp
.deps/: logging.Po  pe_layout_controller.Po  stringprintf.Po
format/: hexdump.h
logger/: logging.cpp  logging.hpp  stringprintf.cpp  stringprintf.hpp
mapped_file/: mapped_file_controller.cpp  mapped_file_controller.h  mapped_file_controller.hpp
test_fs/: Makefile  Makefile.am  Makefile.in  MyTemplate.vstemplate  environment_test.hpp  make_script.sh  test_fs.cpp  test_fs.vcxproj  test_fs.vcxproj.filters  test_pe_.cpp  test_pe_layout_controller.hpp
testsuite/: pe_test.cpp
